--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
    
 
     <!--Header CAROUSEL-->
-    <header id="inicio">
+    <header id="inicio ">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <!--slide 1-->  
@@ -75,26 +75,26 @@
 
     <!--Quienes Somos-->
 
-    <section id="quienes-somos" class="d-none d-md-block p-5">
-        <Div class="text-center">
+    <section id="quienes-somos" class="d-none d-md-block py-5 bg-dark">
+        <Div class="text-center mt-2">
             <h1>¿Quiénes somos?</h1>
         </Div>
         <div>
             <div class="row g-3">
                 <div class="col">
-                  <div class="card h-100 border-0">
+                  <div class="card border-0">
                     <div class="card-header text-bg-danger text-center  rounded-0">
                     <i class="fa-solid fa-plane"></i>
                     </div>
-                    <div class="card-body">
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <div class="card-body bg-dark">
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit quisquam, esse, eligendi ipsa quae harum nulla labore provident laudantium fuga, in maiores! Rem doloremque iusto sunt. Delectus saepe natus accusantium eaque illum necessitatibus dignissimos sed sit excepturi illo quas similique, voluptate ipsum. Quia pariatur omnis provident, aliquid saepe voluptatem iste?</p>
                     </div>
                   </div>
                 </div>
                 <div class="col">
-                  <div class="card h-100 border-0">
-                    <div class="card-body">
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <div class="card border-0">
+                    <div class="card-body bg-dark">
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt esse, sed labore excepturi unde repellendus voluptatibus illum adipisci distinctio obcaecati rerum deleniti velit soluta consectetur ipsa deserunt, cumque dignissimos fugiat quo quasi nam. Laborum iure quas ratione. Optio ex sapiente, temporibus, mollitia qui impedit expedita excepturi nesciunt, dolores omnis numquam.</p>
                     </div>
                     <div class="card-header text-bg-danger text-center rounded-0">
                     <i class="fa-solid fa-mountain"></i>
@@ -102,12 +102,12 @@
                   </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100 border-0">
+                    <div class="card border-0">
                       <div class="card-header text-bg-danger text-center rounded-0">
                         <i class="fa-solid fa-route"></i>
                       </div>
-                      <div class="card-body">
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <div class="card-body bg-dark">
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta mollitia fugiat, eius facilis maxime officia tenetur ab voluptatibus, quaerat beatae qui a porro reiciendis aperiam, itaque nostrum nulla dolore expedita ea! Iure dolorem dolor expedita similique? Cupiditate nemo ad hic corporis numquam perferendis maiores ea culpa. Corrupti veritatis reprehenderit tempore!</p>
                       </div>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
 
     <!--Destacados-->
 
-    <section id="destacados" class="py-5">
+    <section id="destacados" class="py-5 bg-dark">
         <Div class="text-center mt-2 fw-bold">
             <h1>Destacados</h1>
         </Div>
@@ -167,41 +167,43 @@
 
     <!--Formulario contacto-->
 
-    <section id="contacto" class="p-5">
-        <Div class="text-center">
+    <section id="contacto" class="py-5 bg-dark">
+        <Div class="text-center text-white">
             <h1>Contacto</h1>
         </Div>
-        <div class="row">
+        <div class="formulario p-4">
+        <div class="row mt-3">
             <!--Nombre-->
             <div class="col">
-                <label for="nombreform"  class="form-label">Nombre</label>
+                <label for="nombreform"  class="form-label text-white">Nombre</label>
                 <input type="text" class="form-control"aria-label="First name">
             </div>
             <!--Correo electronico-->
             <div class="col">
-                <label for="exampleFormControlInput1" class="form-label">Email</label>
+                <label for="exampleFormControlInput1" class="form-label text-white">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
             </div>
         </div>
             <!--Asunto-->
-             <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Asunto</label>
+             <div class="mb-3 mt-2">
+                <label for="exampleFormControlInput1" class="form-label text-white">Asunto</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1">
             </div>
             <!--Mensaje-->
             <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+                <label for="exampleFormControlTextarea1" class="form-label text-white">Mensaje</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
             </div>
           <div>
           <!--Botón con tooltip-->  
           <button type="button" id="btn-enviar" class="btn btn-outline-danger" data-bs-toggle="tooltip"  data-bs-placement="right" title="Presiona para enviar tu mensaje">Enviar</button>
           </div>
+        </div>  
     </section>
 
     <!--Footer-->
 
-    <footer id="footer" class="text-center text-white py-5">
+    <footer id="footer" class="text-center text-white py-5 bg-danger">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-6">
