--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--NavBar-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-md-3">
             <div class="container">
-            <a class="navbar-brand" href="#"><img src="Assets/img/viajes.svg" style="width: 30px"> Viajes Chile</a>
+            <a class="navbar-brand" href="#"><img src="assets/img/viajes.svg" style="width: 30px"> Viajes Chile</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -125,7 +125,7 @@
             <!--Card 1-->
             <div class="col-md-3 col-sm-6 mb-3">
                 <div class="card h-100">
-                    <img src="Assets/img/card1.jpg" class="card-img-top h-50" alt="card1"> </a>
+                    <img src="assets/img/card1.jpg" class="card-img-top h-50" alt="card1"> </a>
                     <div class="card-body">
                       <h5 class="card-title">Lorem ipsum dolor sit amet.</h5>
                       <p class="card-text"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum corporis temporibus perspiciatis libero consequatur odit deleniti voluptate ut. Totam, minus?</p>   
@@ -135,7 +135,7 @@
              <!--Card 2-->        
             <div class="col-md-3 col-sm-6 mb-3">
                 <div class="card h-100">
-                    <img src="Assets/img/card2.jpg" class="card-img-top h-50" alt="card2"> </a>
+                    <img src="assets/img/card2.jpg" class="card-img-top h-50" alt="card2"> </a>
                         <div class="card-body">
                             <h5 class="card-title">Lorem ipsum dolor sit amet.</h5>
                             <p class="card-text"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum corporis temporibus perspiciatis libero consequatur odit deleniti voluptate ut. Totam, minus?</p>        
@@ -145,7 +145,7 @@
              <!--Card 3-->
             <div class="col-md-3 col-sm-6 mb-3">
                 <div class="card h-100">
-                    <img src="Assets/img/card3.jpg" class="card-img-top h-50" alt="card-3"> </a>
+                    <img src="assets/img/card3.jpg" class="card-img-top h-50" alt="card-3"> </a>
                         <div class="card-body">
                             <h5 class="card-title">Lorem ipsum dolor sit amet.</h5>
                             <p class="card-text"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum corporis temporibus perspiciatis libero consequatur odit deleniti voluptate ut. Totam, minus?</p>      
@@ -155,7 +155,7 @@
              <!--Card 4-->
             <div class="col-md-3 col-sm-6 mb-3">
                 <div class="card h-100">
-                    <img src="Assets/img/card4.jpg" class="card-img-top h-50" alt="card-4"> </a>
+                    <img src="assets/img/card4.jpg" class="card-img-top h-50" alt="card-4"> </a>
                         <div class="card-body">
                             <h5 class="card-title">Lorem ipsum dolor sit amet.</h5>
                             <p class="card-text"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum corporis temporibus perspiciatis libero consequatur odit deleniti voluptate ut. Totam, minus?</p>      
